--- a/notebooks/ga_params_opt.ipynb
+++ b/notebooks/ga_params_opt.ipynb
@@ -10,10 +10,10 @@
     "py.init_notebook_mode()\n",
     "\n",
     "import os, glob, cv2\n",
-    "from ict.particle_tracking.io import load_dm4_file, binarize_file_list\n",
-    "from ict.particle_tracking.image_processing import ImageEnhance, ImageMerge, ImageBinarization\n",
-    "from ict.particle_tracking.gui.image_visualization import ImageVisualizationPlotly\n",
-    "from ict.particle_tracking.gui.parameter_tuner import ImageEnhanceTuner, ImageBinarizationTuner, ImageMergeTuner\n",
+    "from cfntem.particle_tracking.io import load_dm4_file, binarize_file_list\n",
+    "from cfntem.particle_tracking.image_processing import ImageEnhance, ImageMerge, ImageBinarization\n",
+    "from cfntem.particle_tracking.gui.image_visualization import ImageVisualizationPlotly\n",
+    "from cfntem.particle_tracking.gui.parameter_tuner import ImageEnhanceTuner, ImageBinarizationTuner, ImageMergeTuner\n",
     "import ipywidgets"
    ]
   },
