--- a/notebooks/bin_dm4.ipynb
+++ b/notebooks/bin_dm4.ipynb
@@ -18,10 +18,10 @@
    "source": [
     "import os, glob\n",
     "\n",
-    "from ict.particle_tracking.io import load_dm4_file, binarize_file_list\n",
-    "from ict.particle_tracking.image_processing import ImageEnhance, ImageMerge, ImageBinarization\n",
-    "from ict.particle_tracking.gui.image_visualization import ImageVisualizationPlotly\n",
-    "from ict.particle_tracking.gui.parameter_tuner import ImageEnhanceTuner, ImageBinarizationTuner, ImageMergeTuner"
+    "from cfntem.particle_tracking.io import load_dm4_file, binarize_file_list\n",
+    "from cfntem.particle_tracking.image_processing import ImageEnhance, ImageMerge, ImageBinarization\n",
+    "from cfntem.particle_tracking.gui.image_visualization import ImageVisualizationPlotly\n",
+    "from cfntem.particle_tracking.gui.parameter_tuner import ImageEnhanceTuner, ImageBinarizationTuner, ImageMergeTuner"
    ]
   },
   {
